--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@google-cloud/speech": "^7.1.0",
+    "@google/genai": "^1.6.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.1.3",
