--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,7 @@
     "@google-cloud/speech": "^7.1.0",
     "@google/genai": "^1.6.0",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.1.3",
     "axios": "^1.10.0",
