--- a/api/package.json
+++ b/api/package.json
@@ -21,12 +21,14 @@
   },
   "dependencies": {
     "@google-cloud/speech": "^7.1.0",
+    "@google-cloud/text-to-speech": "^6.1.0",
     "@google/genai": "^1.6.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.1.3",
     "axios": "^1.10.0",
+    "express": "^5.1.0",
     "multer": "^2.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
