--- a/api/package.json
+++ b/api/package.json
@@ -35,6 +35,7 @@
     "class-validator": "^0.14.2",
     "date-fns": "^4.1.0",
     "express": "^5.1.0",
+    "ioredis": "^5.6.1",
     "multer": "^2.0.1",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
