--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,3 +4,12 @@ packages:
   - web
 
 nodeLinker: hoisted
+
+onlyBuiltDependencies:
+  - '@nestjs/core'
+  - '@scarf/scarf'
+  - '@swc/core'
+  - esbuild
+  - protobufjs
+  - unrs-resolver
+  - vue-demi
