--- a/api/package.json
+++ b/api/package.json
@@ -37,6 +37,7 @@
     "cache-manager-redis-yet": "^5.1.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "data-fns": "^1.1.0",
     "date-fns": "^4.1.0",
     "express": "^5.1.0",
     "ioredis": "^5.6.1",
