--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.10.0",
     "element-plus": "^2.10.2",
     "pinia": "^3.0.1",
+    "socket.io-client": "^4.8.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
