--- a/api/package.json
+++ b/api/package.json
@@ -49,6 +49,7 @@
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "typeorm": "^0.3.25",
     "uuid": "^11.1.0",
     "ws": "^8.18.3"
@@ -66,6 +67,7 @@
     "@types/multer": "^1.4.13",
     "@types/node": "^22.10.7",
     "@types/passport-jwt": "^4.0.1",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^6.0.2",
     "@types/ws": "^8.18.1",
     "eslint": "^9.18.0",
