feat(api): 整合 Gemini 模型並優化 WebSocket 通訊
- 新增 WebSocket 适配器以支持 WebSocket 通讯
- 整合 Google Gemini 模型用于对话生成
- 添加语音识别和文本转语音功能
- 优化对话历史管理，支持 Redis 存储
- 移除旧的对话框示例，为新功能让路

--- a/app/app.json
+++ b/app/app.json
@@ -10,9 +10,14 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.cherites.app"
+      "bundleIdentifier": "com.cherites.app",
+      "infoPlist": {
+        "NSMicrophoneUsageDescription": "我們需要您的麥克風權限，才能進行即時語音對話。",
+        "UIBackgroundModes": ["audio"]
+      }
     },
     "android": {
+      "newArchEnabled": false,
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -30,12 +35,7 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      [
-        "expo-av",
-        {
-          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone."
-        }
-      ],
+      "@siteed/expo-audio-studio",
       "expo-router",
       [
         "expo-splash-screen",
