--- a/app/package.json
+++ b/app/package.json
@@ -15,11 +15,12 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@siteed/expo-audio-studio": "^2.18.1",
     "@types/uuid": "^10.0.0",
     "axios": "^1.10.0",
     "expo": "~53.0.13",
+    "expo-audio": "^0.4.8",
     "expo-auth-session": "~6.2.1",
-    "expo-av": "^15.1.7",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
     "expo-crypto": "~14.1.5",
@@ -41,9 +42,11 @@
     "react-native": "0.79.4",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-live-audio-stream": "^1.1.1",
     "react-native-reanimated": "~3.17.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-track-player": "^4.1.2",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "rive-react-native": "^9.3.4",
