--- a/godot/export_presets.cfg
+++ b/godot/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../資創/english.apk"
+export_path="C:/Users/cheri/Downloads/english.apk"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
