feat : 定位場景的物件由場景控制而非腳本，修正視窗尺寸，按鈕點擊事件下個版本更新

--- a/godot/export_presets.cfg
+++ b/godot/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="C:/Users/cheri/Downloads/english.apk"
+export_path="../../englishTest/english.apk"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
