--- a/godot/export_presets.cfg
+++ b/godot/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../englishTest/english.apk"
+export_path="../../..//blabla.apk"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -36,7 +36,7 @@ architectures/x86_64=false
 version/code=1
 version/name=""
 package/unique_name="com.mou.english"
-package/name="mou-english"
+package/name="bla-bla"
 package/signed=true
 package/app_category=2
 package/retain_data_on_uninstall=false
